# raylib-template

./: .gitignore  CMakeLists.txt
include/: player.h
src/: main.c  player.c
